<resources>
    <string name="app_name">My Catalogue Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="cari">Search</string>
    <string name="release_date">Release Date</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="detail">Detail</string>
    <string name="result">No Movie Found!</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="fav">Fav</string>
    <string name="favorite">Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">NO DATA</string>
    <string name="notification_daily_reminder">Notification Daily Reminder</string>
    <string name="notification">Notification</string>
    <string name="notification_release_reminder">Notification Release Reminder</string>
</resources>
